--- a/MyLeoRetailer/Views/PostLogin/Master/ProductDispatch/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/ProductDispatch/Search.cshtml
@@ -38,13 +38,11 @@
 
     <div class="row">
 
-        <div class="col-md-12" style="padding-top: 10px; padding-left: 10px; padding-right: 10px;">
+        <div class="col-md-12" style="padding-top: 0px; padding-left: 10px; padding-right: 10px;">
 
             <div class="block">
 
-                <form role="form" id="frmProductDispatch">
-
-                    
+                <form role="form" id="frmProductDispatch">                    
 
                         <div class="row">
 
@@ -120,6 +118,8 @@
 
                                     <button role="button" class="btn btn-success active edit" id="btnDispatch">Dispatch</button>
 
+                                    <button type="reset" class="btn btn-danger active" value="Reset" id="btnReset">Reset</button>
+
                                 </div>
 
 
@@ -146,7 +146,7 @@
     </div>
 
 
-    <div class="col-md-12" style="padding-top: 20px; padding-left: 10px; padding-right: 10px;">
+    <div class="col-md-12" style="padding-top: 0px; padding-left: 10px; padding-right: 10px;">
 
     </div>
 
