--- a/MyLeoRetailer/Views/PostLogin/Master/VendorContact/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/VendorContact/Search.cshtml
@@ -31,7 +31,7 @@
 
     <div class="row">
 
-        <div class="col-md-12" style="padding-top: 20px; padding-left: 10px; padding-right: 10px;">
+        <div class="col-md-12" style="padding-top: 0px; padding-left: 10px; padding-right: 10px;">
 
             <div class="block">
 
@@ -48,6 +48,11 @@
 
                             </div>*@
                             @*Added by vinod mane on 20/09/2016*@
+
+                            <div class="input-group">
+                                <span class="label label-primary label-form" style="margin-bottom: 1px;">Vendor contact name.</span>
+                            </div>
+
                             <div class="form-group auto-complete">
                                 <div class="input-group">
                                     <input type="text" class="form-control color-filter autocomplete-text" name="Filter.Vendor_Contact_Name" id="txtVendor_Contact_Name" placeholder="Enter Vendor Contact name to search." data-table="VendorContact" data-col="VendorContact_Id,Vendor_Contact_Name" data-headernames="Vendor Contact">
@@ -60,7 +65,7 @@
                             @*End*@
                         </div>
 
-                        <div class="col-md-8" style="text-align: right; padding-top: 0px; padding-bottom: 0px; padding-right: 0px; padding-left: 0px;">
+                        <div class="col-md-8" style="text-align: right; padding-top: 25px; padding-bottom: 0px; padding-right: 0px; padding-left: 0px;">
 
                             <div class="btn-group">
                                 
