--- a/MyLeoRetailer/Views/PostLogin/SalesOrder/SalesReport.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/SalesOrder/SalesReport.cshtml
@@ -33,7 +33,7 @@
 
     <div class="row">
 
-        <div class="col-md-12" style="padding-top: 10px; padding-left: 10px; padding-right: 10px;">
+        <div class="col-md-12" style="padding-top: 0px; padding-left: 10px; padding-right: 10px;">
 
             <div class="block">
 
@@ -84,12 +84,14 @@
                             </div>
                         </div>
 
-                        <div class="col-md-3" style="text-align: right; padding-top: 20px; padding-bottom: 0px; padding-right: 0px; padding-left: 0px;">
+                        <div class="col-md-3" style="text-align: right; padding-top: 25px; padding-bottom: 0px; padding-right: 0px; padding-left: 0px;">
 
                             <div class="btn-group">
                                 <button type="button" class="btn btn-success active" value="Search" id="btnSearchSales">Search</button>
 
-                                <button type="button" id="btnDetails" class="btn btn-danger active" data-toggle="modal" data-target="#myModal">Details</button>
+                                <button type="reset" class="btn btn-danger active" value="Reset" id="btnResetSales">Reset</button>
+
+                                <button type="button" id="btnDetails" class="btn btn-info active" data-toggle="modal" data-target="#myModal">Details</button>                                                               
                             </div>
                         </div>
                     </div>
