--- a/MyLeoRetailer/Views/PostLogin/Master/Employee/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Employee/Search.cshtml
@@ -91,7 +91,7 @@
 
     <div class="row">
 
-        <div class="col-md-12" style="padding-top: 20px; padding-left: 10px; padding-right: 10px;">
+        <div class="col-md-12" style="padding-top: 0px; padding-left: 10px; padding-right: 10px;">
 
             <div class="block">
 
@@ -99,9 +99,12 @@
 
                     <div class="row">
 
-                        <div class="col-md-4" style="padding: 0px;">
+                        <div class="col-md-4">
+                            <div class="input-group">
+                                <span class="label label-primary label-form" style="margin-bottom: 1px;">Employee name.</span>
+                            </div>
 
-                            <div class="form-group auto-complete">
+                            <div class="form-group auto-complete">                               
                                 <div class="input-group">
                                     <input type="text" class="form-control color-filter autocomplete-text" name="Filter.Employee" id="txtEmployee_Name" placeholder="Enter employee name to search." data-table="Employee" data-col="Employee_Id,Employee_Name" data-headernames="Employee">
                                     <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
@@ -118,7 +121,7 @@
 
                         </div>
 
-                        <div class="col-md-8" style="text-align: right; padding-top: 0px; padding-bottom: 0px; padding-right: 0px; padding-left: 0px;">
+                        <div class="col-md-8" style="text-align: right; padding-top: 25px; padding-bottom: 0px; padding-right: 0px; padding-left: 0px;">
 
                             <div class="btn-group">
                                 @*<button class="btn btn-success active" onclick="location.href='@Url.Action("Index","Employee")'">Create</button>*@
