--- a/MyLeoRetailer/Views/PostLogin/Master/Payable/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Payable/Index.cshtml
@@ -36,133 +36,116 @@
 
 <div class="page-content-wrap">
 
-    <form role="form" id="frmPayable" method="post">
+    <div class="row">
+        <div class="col-md-12" style="padding-top: 0px; padding-left: 10px; padding-right: 10px;">
 
-        <div class="box box-default">
+            <div class="block">
 
-            <div class="box-body">
+                <form role="form" id="frmPayable" method="post">
 
-                <input type="hidden" class="form-control input-sm" name="Payable.Payable_Id" id="hdf_Payable_Id" value="Payable.Payable_Id">
+                    <input type="hidden" class="form-control input-sm" name="Payable.Payable_Id" id="hdf_Payable_Id" value="Payable.Payable_Id">
 
-                <input type="hidden" class="form-control input-sm" name="Payable.Purchase_Credit_Note_Id" id="hdf_Purchase_Credit_Note_Id">
+                    <input type="hidden" class="form-control input-sm" name="Payable.Purchase_Credit_Note_Id" id="hdf_Purchase_Credit_Note_Id">
 
-                <input type="hidden" class="form-control input-sm" name="Payable.Purchase_Invoice_Id" id="hdf_Purchase_Invoice_Id" value="@Model.Payable.Purchase_Invoice_Id">
+                    <input type="hidden" class="form-control input-sm" name="Payable.Purchase_Invoice_Id" id="hdf_Purchase_Invoice_Id" value="@Model.Payable.Purchase_Invoice_Id">
 
-                <input type="hidden" value="0" id="hdf_temp">
+                    <input type="hidden" value="0" id="hdf_temp">
 
-                <div class="col-md-12" style="padding-top: 0px; padding-left: 0px; padding-right: 0px;">
+                    <div class="row">
+                        <div class="col-md-3">
+                            @*<div class="form-group">
+                                    <span class="label label-primary label-form" style="margin-bottom: 1px;">Vendor Name</span>
+                                    <input type="text" class="form-control input-sm" name="Payable.Vendor_Name" id="txtVnedor_Name" value="@Model.Payable.Vendor_Name" placeholder="Enter Vendor Name" />
+                                </div>*@
 
-                    <div class="col-md-12" style="padding-top: 20px; padding-left: 0px; padding-right: 0px;">
-
-                        <div class="row">
-                            <div class="col-md-3">
-                                @*<div class="form-group">
-                                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Vendor Name</span>
-                                        <input type="text" class="form-control input-sm" name="Payable.Vendor_Name" id="txtVnedor_Name" value="@Model.Payable.Vendor_Name" placeholder="Enter Vendor Name" />
-                                    </div>*@
-
-                                <div class="form-group auto-complete">
-                                    <span class="label label-primary label-form" style="margin-bottom: 1px;">Vendor name</span>
-                                    <div class="input-group">
-                                        <input type="text" class="form-control invoice-filter autocomplete-text" name="Payable.Vendor_Name" id="text_Vendor_Name" placeholder="Enter Vendor name to search" value="" data-table="Vendor" data-col=" Vendor_Id,Vendor_Name" data-headernames="Vendor">
-                                        <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
-                                        @*<input type="hidden" id="hdnVendorId" name="Payable.Vendor_Id" class="auto-complete-label" />
+                            <div class="form-group auto-complete">
+                                <span class="label label-primary label-form" style="margin-bottom: 1px;">Vendor name</span>
+                                <div class="input-group">
+                                    <input type="text" class="form-control invoice-filter autocomplete-text" name="Payable.Vendor_Name" id="text_Vendor_Name" placeholder="Enter Vendor name to search" value="" data-table="Vendor" data-col=" Vendor_Id,Vendor_Name" data-headernames="Vendor">
+                                    <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
+                                    @*<input type="hidden" id="hdnVendorId" name="Payable.Vendor_Id" class="auto-complete-label" />
                                         <input type="hidden" id="hdnVendorName" name="Payable.Vendor_Name" class="auto-complete-value" />*@
-                                      
-                                          @*Added by vinod mane on 26/10/2016*@
-                                        <input type="hidden" id="hdnVendorId" name="Payable.Vendor_Id" />
-                                        <input type="hidden" id="hdnVendorName" name="Payable.Vendor_Name" class="auto-complete-value" />
-                                        @*End*@
 
-                                    </div>
-                                 
+                                    @*Added by vinod mane on 26/10/2016*@
+                                    <input type="hidden" id="hdnVendorId" name="Payable.Vendor_Id" />
+                                    <input type="hidden" id="hdnVendorName" name="Payable.Vendor_Name" class="auto-complete-value" />
+                                    @*End*@
+
                                 </div>
+
                             </div>
+                        </div>
 
-                            <div class="col-md-3">
-                                <div class="form-group">
-                                    <span class="label label-primary label-form" style="margin-bottom: 1px;">Payable status</span>
-                                    <select class="form-control" id="drpPayble_Status" name="Payable.Payament_Status">
-                                        <option value="0">Select Payable Status</option>
+                        <div class="col-md-3">
+                            <div class="form-group">
+                                <span class="label label-primary label-form" style="margin-bottom: 1px;">Payable status</span>
+                                <select class="form-control" id="drpPayble_Status" name="Payable.Payament_Status">
+                                    <option value="">Select Payable Status</option>
 
-                                        @foreach (var item in LookupInfo.Get_Payment_Status())
+                                    @foreach (var item in LookupInfo.Get_Payment_Status())
+                                    {
+
+                                        if (Model.Payable.Payament_Status == item.Key)
                                         {
-
-                                            if (Model.Payable.Payament_Status == item.Key)
-                                            {
-                                                <option value="@item.Key" selected="selected">@item.Value</option>
-                                            }
-                                            else
-                                            {
-                                                <option value="@item.Key">@item.Value</option>
-                                            }
-
+                                            <option value="@item.Key" selected="selected">@item.Value</option>
+                                        }
+                                        else
+                                        {
+                                            <option value="@item.Key">@item.Value</option>
                                         }
 
-                                    </select>
-                                </div>
+                                    }
+
+                                </select>
                             </div>
-
-                            <div class="col-md-2">
-                                <div class="form-group">
-                                    <span class="label label-primary label-form" style="margin-bottom: 1px;">From date.</span>
-                                    <div class="input-group date" id="dp-2" data-date="" data-date-format="MM-dd-yyyy">
-                                        <input type="text" class="form-control datepicker" name="Payable.From_Date" value="@((Model.Payable.From_Date == DateTime.MinValue ? "" : Model.Payable.From_Date.ToString("MM-dd-yyyy")))" reado readonly />
-                                        <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="col-md-2">
-                                <div class="form-group">
-                                    <span class="label label-primary label-form" style="margin-bottom: 1px;">To date</span>
-                                    <div class="input-group date" id="txtTo_Date" data-date="" data-date-format="MM-dd-yyyy">
-                                        <input type="text" class="form-control datepicker" name="Payable.To_Date" value="@((Model.Payable.To_Date == DateTime.MinValue ? "" : Model.Payable.To_Date.ToString("MM-dd-yyyy")))" reado readonly />
-                                        <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="col-md-2" style="text-align: right; margin-top: 25px;">
-
-                                <div class="btn-group">
-                                    <button type="button" id="btnSearchPayable" class="btn btn-success active">Search</button>
-                                    @*<button type="reset" id="btnResetPayable" class="btn btn-danger active">Reset</button>*@
-                                    <button type="button" id="btnPay" class="btn btn-danger active">Pay</button>
-                                </div>
-                            </div>
-
                         </div>
 
-                    </div>
-
-                    <div class="col-md-12" style="padding-top: 20px; padding-left: 0px; padding-right: 0px;">
-
-                        <div class="row">
-
-
-
+                        <div class="col-md-2">
+                            <div class="form-group">
+                                <span class="label label-primary label-form" style="margin-bottom: 1px;">From date.</span>
+                                <div class="input-group date" id="dp-2" data-date="" data-date-format="MM-dd-yyyy">
+                                    <input type="text" class="form-control datepicker" name="Payable.From_Date" value="@((Model.Payable.From_Date == DateTime.MinValue ? "" : Model.Payable.From_Date.ToString("MM-dd-yyyy")))" reado readonly />
+                                    <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
+                                </div>
+                            </div>
                         </div>
 
+                        <div class="col-md-2">
+                            <div class="form-group">
+                                <span class="label label-primary label-form" style="margin-bottom: 1px;">To date</span>
+                                <div class="input-group date" id="txtTo_Date" data-date="" data-date-format="MM-dd-yyyy">
+                                    <input type="text" class="form-control datepicker" name="Payable.To_Date" value="@((Model.Payable.To_Date == DateTime.MinValue ? "" : Model.Payable.To_Date.ToString("MM-dd-yyyy")))" reado readonly />
+                                    <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-2" style="text-align: right; margin-top: 25px;">
+
+                            <div class="btn-group">
+                                <button type="button" id="btnSearchPayable" class="btn btn-success active">Search</button>
+                                <button type="reset" id="btnResetPayable" class="btn btn-danger active">Reset</button>
+                                <button type="button" id="btnPay" class="btn btn-info active">Pay</button>
+                            </div>
+                        </div>
+
+
                     </div>
-
-                    @*<div class="col-md-12" style="padding: 0px;" id="divDynamicTable">*@
-                    <div class="col-md-12" id="divDynamicTable" style="background: rgba(0, 0, 0, 0.06); border-top: 1px solid #DDD; padding-top: 0px; padding-bottom:0; margin-bottom: 0; padding-left: 0; padding-right: 0;">
-
-
-                    </div>
-
-                    <div class="col-md-12" style="padding: 0px;text-align:center;" id="divPayablePager">
-
-
-                    </div>
-
-
-                </div>
-
+                </form>
             </div>
         </div>
-    </form>
+        @*<div class="col-md-12" style="padding: 0px;" id="divDynamicTable">*@
+        <div class="col-md-12" id="divDynamicTable" style="background: rgba(0, 0, 0, 0.06); border-top: 1px solid #DDD; padding-top: 0px; padding-bottom:0; margin-bottom: 0; padding-left: 0; padding-right: 0;">
 
+
+        </div>
+
+        <div class="col-md-12" style="padding: 0px;text-align:center;" id="divPayablePager">
+
+
+        </div>
+
+    </div>
 </div>
+
 
