--- a/MyLeoRetailer/Views/PostLogin/Master/Product/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Product/Search.cshtml
@@ -29,7 +29,7 @@
 
     <div class="row">
 
-        <div class="col-md-12" style="padding-top: 50px; padding-left: 10px; padding-right: 10px;">
+        <div class="col-md-12" style="padding-top: 0px; padding-left: 10px; padding-right: 10px;">
 
             <div class="block">
 
@@ -44,9 +44,11 @@
                 </div>
             </div>*@
                         <div class="col-md-4">
+                            <div class="input-group">
+                                <span class="label label-primary label-form" style="margin-bottom: 1px;">Article no.</span>
+                            </div>
                             <div class="form-group auto-complete">
-                                <div class="input-group">
-                                    <span class="label label-primary label-form" style="margin-bottom: 1px;">Article No.</span>
+                                <div class="input-group">                                   
                                     <input type="text" class="form-control brand-filter autocomplete-text" name="Filter.Article_No" id="txtArticle_No" placeholder="Enter Product article no." data-table="Product" data-col="Product_Id,Article_No" data-headernames="Product">
                                     <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
                                     <input type="hidden" id="hdnProduct_Id" value="" name="Product.Product_Id" />
@@ -56,9 +58,7 @@
                             </div>
                         </div>
 
-
-
-                        <div class="col-md-8" style="padding-top: 5px; text-align: right; padding-bottom: 0px; padding-right: 0px; padding-left: 0px;">
+                        <div class="col-md-8" style="padding-top: 25px; text-align: right; padding-bottom: 0px; padding-right: 0px; padding-left: 0px;">
                             <div class="btn-group">
                                 <a type="button" class="btn btn-success active" role="button" href="@Url.Action("Index", "Product")">Create </a>
                                 @*<button type="button" class="btn btn-danger active" id="btnEdit" style="display:none">Edit</button>
