--- a/MyLeoRetailer/Views/PostLogin/Master/Receivable/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Receivable/Index.cshtml
@@ -36,11 +36,11 @@
 
     <div class="row">
 
-        <form role="form" id="frmReceivable" method="post">
+        <div class="col-md-12" style="padding-top: 0px; padding-left: 10px; padding-right: 10px;margin-bottom: 0; ">
 
-            <div class="box box-default">
+            <div class="block">
 
-                <div class="box-body">
+                <form role="form" id="frmReceivable" method="post">
 
                     <input type="hidden" class="form-control input-sm" name="Receivable.Receivable_Id" id="hdf_Receivable_Id" value="@Model.Receivable.Receivable_Id">
 
@@ -49,151 +49,128 @@
                     <input type="hidden" class="form-control input-sm" name="Receivable.Sales_Invoice_Id" id="hdf_Sales_Invoice_Id" value="@Model.Receivable.Sales_Invoice_Id">
 
                     <input type="hidden" class="form-control input-sm" name="Receivable.Gift_Voucher_Id" id="hdf_Gift_Voucher_Id">
+                    
+                    <div class="row">
 
-                    <div class="col-md-12" style="padding-top: 0px; padding-left: 0px; padding-right: 0px;">
-
-                        <div class="col-md-12" style="padding-top: 20px; padding-left: 0px; padding-right: 0px;">
-
-                            <div class="row">
-
-                               
-
-                                <div class="col-md-2">
-                                    @*<div class="form-group">
-                                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Invoice no</span>
-                                        <input type="text" class="form-control input-sm" name="Receivable.Sales_Invoice_No" id="txtInvoice_no" value="@Model.Receivable.Sales_Invoice_No" placeholder="Enter Invoice no" maxlength="10"/>
-                                    </div>*@
+                        <div class="col-md-2">
+                            @*<div class="form-group">
+                                    <span class="label label-primary label-form" style="margin-bottom: 1px;">Invoice no</span>
+                                    <input type="text" class="form-control input-sm" name="Receivable.Sales_Invoice_No" id="txtInvoice_no" value="@Model.Receivable.Sales_Invoice_No" placeholder="Enter Invoice no" maxlength="10"/>
+                                </div>*@
 
 
-                                    @*<div class="form-group auto-complete">
-                                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Invoice no</span>
-                                        <div class="input-group">
-                                            <input type="text" class="form-control invoice-filter autocomplete-text" name="Receivable.Sales_Invoice_No" id="txtInvoice_no" placeholder="Enter Invoice no to search" value="" data-table="Sales_Invoice" data-col=" Sales_Invoice_Id,Sales_Invoice_No" data-headernames="Invoice No">
-                                            <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
-                                            <input type="hidden" id="hdnSalesInvoiceId" name="Receivable.Sales_Invoice_Id" class="auto-complete-value" />
-                                            <input type="hidden" id="hdnSalesInvoiceNo" name="Receivable.Sales_Invoice_No" class="auto-complete-label" />
+                            @*<div class="form-group auto-complete">
+                                    <span class="label label-primary label-form" style="margin-bottom: 1px;">Invoice no</span>
+                                    <div class="input-group">
+                                        <input type="text" class="form-control invoice-filter autocomplete-text" name="Receivable.Sales_Invoice_No" id="txtInvoice_no" placeholder="Enter Invoice no to search" value="" data-table="Sales_Invoice" data-col=" Sales_Invoice_Id,Sales_Invoice_No" data-headernames="Invoice No">
+                                        <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
+                                        <input type="hidden" id="hdnSalesInvoiceId" name="Receivable.Sales_Invoice_Id" class="auto-complete-value" />
+                                        <input type="hidden" id="hdnSalesInvoiceNo" name="Receivable.Sales_Invoice_No" class="auto-complete-label" />
 
-                                        </div>
-                                    </div>*@
+                                    </div>
+                                </div>*@
 
-                                    @{
-                                        LoginInfo Cookies = new LoginInfo();
-                                        Cookies = Utility.Get_Login_User("MyLeoLoginInfo", "MyLeoToken", "Branch_Ids");
+                            @{
+                                LoginInfo Cookies = new LoginInfo();
+                                Cookies = Utility.Get_Login_User("MyLeoLoginInfo", "MyLeoToken", "Branch_Ids");
 
-                                        <input type="hidden" id="hdnBranchIDs" value="@Cookies.Branch_Ids" />
+                                <input type="hidden" id="hdnBranchIDs" value="@Cookies.Branch_Ids" />
+                            }
+
+                            <div class="form-group auto-complete">
+                                <span class="label label-primary label-form" style="margin-bottom: 1px;">Invoice no</span>
+                                <div class="input-group">
+                                    <input type="text" class="form-control invoice-filter autocomplete-text" name="Receivable.Sales_Invoice_No" id="txtInvoice_no" placeholder="Enter Invoice no to search" value="" data-table="Sales_Invoice" data-col="Branch_ID,Sales_Invoice_No" data-param="hdnBranchIDs" data-field="Branch_Id" data-headernames="Invoice No">
+                                    <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
+                                    @*<input type="hidden" id="hdnSalesInvoiceId" name="Receivable.Sales_Invoice_Id" class="auto-complete-label" />
+                                        <input type="hidden" id="hdnSalesInvoiceNo" name="Receivable.Sales_Invoice_No" class="auto-complete-value" />*@
+
+                                    <input type="hidden" id="hdnSalesInvoiceId" name="Receivable.Sales_Invoice_Id" />
+                                    <input type="hidden" id="hdnSalesInvoiceNo" name="Receivable.Sales_Invoice_No" class="auto-complete-value" />
+
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                        <div class="col-md-2">
+                            <div class="form-group">
+                                <span class="label label-primary label-form" style="margin-bottom: 1px;">Customer name</span>
+                                <input type="text" class="form-control input-sm" name="Receivable.Customer_Name" id="txtCustomer_name" value="@Model.Receivable.Customer_Name" placeholder="Enter Customer name " maxlength="20" />
+                            </div>
+                        </div>
+
+                        <div class="col-md-2">
+                            <div class="form-group">
+                                <span class="label label-primary label-form" style="margin-bottom: 1px;">Payment status</span>
+                                <select class="form-control" id="drpPayble_Status" name="Receivable.Payment_Status">
+                                    <option value="0">Select Payment Status</option>
+
+                                    @foreach (var item in LookupInfo.Get_Receivable_Status())
+                                    {
+
+                                        if (Model.Receivable.Payment_Status == item.Key)
+                                        {
+                                            <option value="@item.Key" selected="selected">@item.Value</option>
+                                        }
+                                        else
+                                        {
+                                            <option value="@item.Key">@item.Value</option>
+                                        }
+
                                     }
 
-                                    <div class="form-group auto-complete">
-                                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Invoice no</span>
-                                        <div class="input-group">
-                                            <input type="text" class="form-control invoice-filter autocomplete-text" name="Receivable.Sales_Invoice_No" id="txtInvoice_no" placeholder="Enter Invoice no to search" value="" data-table="Sales_Invoice" data-col="Branch_ID,Sales_Invoice_No" data-param="hdnBranchIDs" data-field="Branch_Id" data-headernames="Invoice No">
-                                            <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
-                                            @*<input type="hidden" id="hdnSalesInvoiceId" name="Receivable.Sales_Invoice_Id" class="auto-complete-label" />
-                                            <input type="hidden" id="hdnSalesInvoiceNo" name="Receivable.Sales_Invoice_No" class="auto-complete-value" />*@
-
-                                            <input type="hidden" id="hdnSalesInvoiceId" name="Receivable.Sales_Invoice_Id" />
-                                            <input type="hidden" id="hdnSalesInvoiceNo" name="Receivable.Sales_Invoice_No" class="auto-complete-value" />
-
-                                        </div>
-
-                                    </div>
-
-
-                                </div>
-
-                                <div class="col-md-2">
-                                    <div class="form-group">
-                                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Customer name</span>
-                                        <input type="text" class="form-control input-sm" name="Receivable.Customer_Name" id="txtCustomer_name" value="@Model.Receivable.Customer_Name" placeholder="Enter Customer name " maxlength="20" />
-                                    </div>
-                                </div>
-
-                                <div class="col-md-2">
-                                    <div class="form-group">
-                                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Payment status</span>
-                                        <select class="form-control" id="drpPayble_Status" name="Receivable.Payment_Status">
-                                            <option value="0">Select Payment Status</option>
-
-                                            @foreach (var item in LookupInfo.Get_Receivable_Status())
-                                            {
-
-                                                if (Model.Receivable.Payment_Status == item.Key)
-                                                {
-                                                    <option value="@item.Key" selected="selected">@item.Value</option>
-                                                }
-                                                else
-                                                {
-                                                    <option value="@item.Key">@item.Value</option>
-                                                }
-
-                                            }
-
-                                        </select>
-                                    </div>
-                                </div>
-
-                                <div class="col-md-2">
-                                    <div class="form-group">
-                                        <span class="label label-primary label-form" style="margin-bottom: 1px;">From date.</span>
-                                        <div class="input-group date" id="dp-2" data-date="" data-date-format="MM-dd-yyyy">
-                                            <input type="text" class="form-control datepicker" name="Receivable.From_Date" value="@((Model.Receivable.From_Date == DateTime.MinValue ? "" : Model.Receivable.From_Date.ToString("MM-dd-yyyy")))" reado readonly />
-                                            <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="col-md-2">
-                                    <div class="form-group">
-                                        <span class="label label-primary label-form" style="margin-bottom: 1px;">To date</span>
-                                        <div class="input-group date" id="txtTo_Date" data-date="" data-date-format="MM-dd-yyyy">
-                                            <input type="text" class="form-control datepicker" name="Receivable.To_Date" value="@((Model.Receivable.To_Date == DateTime.MinValue ? "" : Model.Receivable.To_Date.ToString("MM-dd-yyyy")))" reado readonly />
-                                            <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="col-md-2" style="text-align: right; margin-top: 25px;">
-                                    <div class="btn-group">
-                                       
-                                        <button type="button" id="btnSearchReceivable" class="btn btn-success active">Search</button>
-                                        <button type="button" id="btnPay" class="btn btn-danger active">Pay</button>
-                                        @*<button type="reset" id="btnResetReceivable" class="btn btn-danger active">Reset</button>*@ @*commented by vinod mane on 26/10/2016*@
-                                       
-                                        
-                                    </div>
-                                </div>
-
-
+                                </select>
                             </div>
-
                         </div>
 
-                        <div class="col-md-12" style="padding-top: 20px; padding-left: 0px; padding-right: 0px;">
-
-                            <div class="row">
-
-                                
-
+                        <div class="col-md-2">
+                            <div class="form-group">
+                                <span class="label label-primary label-form" style="margin-bottom: 1px;">From date.</span>
+                                <div class="input-group date" id="dp-2" data-date="" data-date-format="MM-dd-yyyy">
+                                    <input type="text" class="form-control datepicker" name="Receivable.From_Date" value="@((Model.Receivable.From_Date == DateTime.MinValue ? "" : Model.Receivable.From_Date.ToString("MM-dd-yyyy")))" reado readonly />
+                                    <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
+                                </div>
                             </div>
-
                         </div>
 
-
-                        @*<div class="col-md-12" style="padding: 0px;" id="divDynamicTable">*@
-                            <div class="col-md-12" id="divDynamicTable" style="background: rgba(0, 0, 0, 0.06); border-top: 1px solid #DDD; padding-top: 0px; padding-bottom:0; margin-bottom: 0; padding-left: 0; padding-right: 0;">
+                        <div class="col-md-2">
+                            <div class="form-group">
+                                <span class="label label-primary label-form" style="margin-bottom: 1px;">To date</span>
+                                <div class="input-group date" id="txtTo_Date" data-date="" data-date-format="MM-dd-yyyy">
+                                    <input type="text" class="form-control datepicker" name="Receivable.To_Date" value="@((Model.Receivable.To_Date == DateTime.MinValue ? "" : Model.Receivable.To_Date.ToString("MM-dd-yyyy")))" reado readonly />
+                                    <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
+                                </div>
                             </div>
+                        </div>
 
-                        <div class="col-md-12" style="padding: 0px;text-align:center;" id="divReceivablePager">
+                        <div class="col-md-2" style="text-align: right; margin-top: 25px;">
+                            <div class="btn-group">
+                                <button type="button" id="btnSearchReceivable" class="btn btn-success active">Search</button>
 
+                                <button type="reset" id="btnResetReceivable" class="btn btn-danger active">Reset</button>
 
+                                <button type="button" id="btnPay" class="btn btn-info active">Pay</button>
+                            </div>
                         </div>
 
 
                     </div>
 
-                </div>
 
+                </form>
             </div>
-        </form>
+        </div>
+
+        @*<div class="col-md-12" style="padding: 0px;" id="divDynamicTable">*@
+        <div class="col-md-12" id="divDynamicTable" style="background: rgba(0, 0, 0, 0.06); border-top: 1px solid #DDD; padding-top: 0px; padding-bottom:0; margin-bottom: 0; padding-left: 0; padding-right: 0;">
+        </div>
+
+        <div class="col-md-12" style="padding: 0px;text-align:center;" id="divReceivablePager">
+
+
+        </div>
+
     </div>
 </div>
