Changes in Barcode Generate and Print module

--- a/MyLeoRetailer/Views/PostLogin/Barcode/Barcode.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Barcode/Barcode.cshtml
@@ -63,10 +63,9 @@
 
                             <div class="btn-group pull-right">
                                 <button type="button" class="btn btn-success active" value="Search" id="btnGenerate">Generate</button>
+                                <button type="button" class="btn btn-info active" value="Print" id="btnPrint">Print</button>
+                                <button type="button" class="btn btn-warning active" value="PrintAll" id="btnPrintAll">Print All</button>
                                 <button type="reset" class="btn btn-danger active" value="Reset" id="btnResetBarcode">Reset</button>
-                            </div>
-                            <div class="btn-group pull-right">
-                                <button type="button" class="btn btn-success active" value="Search" id="btnPrint">Print</button>
                             </div>
                         </div>
 
