Changes of binding new row after Barcode scanning in Purchase Invoice, Purchase Return Request, Purchse Return, Sales Invoice, Sales Return, Barcode Print

--- a/MyLeoRetailer/Views/PostLogin/Barcode/PrintBarcode.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Barcode/PrintBarcode.cshtml
@@ -49,7 +49,8 @@
                         </div>
 
                         <div>
-                            <img src="@Model.Barcode.Barcodes[i].Barcode_Image_Url" class="img-rounded" style="width: 100%;">
+                            <img src="@dt.Barcode_Image_Url" class="img-rounded" style="width: 100%;">
+                            @*<img src="@Model.Barcode.Barcodes[i].Barcode_Image_Url" class="img-rounded" style="width: 100%;">*@
                         </div>
 
                     </td>
