Changes In Purchase Order, Purchase Order Request, Purchase Return, Purchase Return Request, Purchase Invoice, Sales Order, Sales Return, Product, Barcode

--- a/MyLeoRetailer/Views/PostLogin/Barcode/Barcode.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Barcode/Barcode.cshtml
@@ -90,10 +90,11 @@
                     <table class="table" id="tblBarcode">
                         <thead>
                             <tr>
-                                <th></th>
-                                <th>Product SKU</th>
-                                <th>Barcode</th>
-                                <th>Barcode Image</th>
+                                <th style="width:5%"></th>
+                                <th style="width:25%">Product SKU</th>
+                                <th style="width:20%">Product SKU ID</th>
+                                <th style ="width:25%">Barcode</th>
+                                <th style="width:25%">Barcode Image</th>
                             </tr>
                         </thead>
                         <tbody></tbody>
