--- a/MyLeoRetailer/Views/PostLogin/SalesOrder/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/SalesOrder/Index.cshtml
@@ -271,9 +271,9 @@
                                             @*<input class="form-control input-sm" type="text" style="width:150px" name="SaleOrderItemList[0].SKU_Code" id="textSKU_No_0" placeholder="SKU Code" onchange="javascript: Get_Sales_Order_Items_By_SKU_Code(0);">*@
                                             <div class="form-group auto-complete">
                                                 <div id="SKU_0" class="input-group">
-                                                    <input type="text" class="form-control invoice-filter autocomplete-text lookup-text" id="textSKU_No_0" onchange="javascript: Get_Sales_Order_Items_By_SKU_Code(0);" placeholder="SKU Code" value="" data-table="Inventorys" data-col="Branch_Id,Product_SKU" data-headernames="SKU Code" name="SaleOrderItemList[0].SKU_Code" data-param="hdnBranchID" data-field="Branch_Id" />
+                                                    <input type="text" class="form-control invoice-filter autocomplete-text lookup-text" id="textSKU_No_0"  placeholder="SKU Code" value="" data-table="Inventorys" data-col="Branch_Id,Product_SKU" data-headernames="SKU Code" name="SaleOrderItemList[0].SKU_Code" data-param="hdnBranchID" data-field="Branch_Id" />
                                                     <span class="input-group-addon"><a href="#" class="text-muted" id="hrefDealer" role="button"><i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
-                                                    <input type="hidden" id="hdnProduct_Id_0" value="" class="auto-complete-value" />
+                                                    <input type="hidden" id="hdnProduct_Id_0" value="" onchange="javascript: Get_Sales_Order_Items_By_SKU_Code(0);" class="auto-complete-value" />
                                                     <input type="hidden" id="hdnSKU_No_0" value="" class="auto-complete-label" />
                                                 </div>
                                             </div>
