Chages in Sales Order, Sales Return, Login, Cutomer Master, Payable, Receivale,

--- a/MyLeoRetailer/Views/PostLogin/Master/Customer/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Customer/Index.cshtml
@@ -59,7 +59,7 @@
 
     <div class="col-md-3" style="background: rgba(0, 0, 0, 0.02); border-right: 1px solid #DDD; padding: 10px; height: 550px;">
 
-        <div class="block" id="Searchcustomer" style="border-bottom: 1px solid #DDD; padding-bottom:20px;margin-bottom:0px; ">
+        <div class="block" id="Searchcustomer" style="border-bottom: 1px solid #DDD; padding-bottom:20px;margin-bottom:0px; display:none;">
 
             <h4 style="margin-top: 0px;">Search customer.</h4>
 
