--- a/MyLeoRetailer/Views/PostLogin/Master/GiftVoucher/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/GiftVoucher/Index.cshtml
@@ -65,22 +65,38 @@
                     <div class="block">
                         <h4 style="margin-top: 0px;">Date detail.</h4>
 
-                        <div class="form-group">
+                        @*<div class="form-group">
                             <span class="label label-primary label-form" style="margin-bottom: 1px;">Voucher date.</span>
                             <div class="input-group date"  data-date="" data-date-format="MM-dd-yyyy">
-                                <input type="text" class="form-control datepicker" id="txtVoucherDate" placeholder="Voucher date." name="GiftVoucher.Gift_Voucher_Date" value="@((Model.GiftVoucher.Gift_Voucher_Date == DateTime.MinValue ? "" : Model.GiftVoucher.Gift_Voucher_Date.ToString("MM-dd-yyyy")))" readonly /> @*reado*@
+                                <input type="text" class="form-control datepicker" id="txtVoucherDate" placeholder="Voucher date." name="GiftVoucher.Gift_Voucher_Date" value="@((Model.GiftVoucher.Gift_Voucher_Date == DateTime.MinValue ? DateTime.Now.ToShortDateString() : Model.GiftVoucher.Gift_Voucher_Date.ToString("MM-dd-yyyy")))" /> 
+                                <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
+                            </div>
+                        </div>*@                     
+                             
+                        @*<div class="form-group">
+                            <span class="label label-primary label-form" style="margin-bottom: 1px;">Voucher expiry date</span>
+                            <div class="input-group date"  data-date="" data-date-format="MM-dd-yyyy">
+                                <input type="text" class="form-control datepicker" id="txtVoucherExpiryDate" placeholder="Voucher expiry date." name="GiftVoucher.Gift_Voucher_Expiry_Date" value="@((Model.GiftVoucher.Gift_Voucher_Expiry_Date == DateTime.MinValue ? DateTime.Now.ToShortDateString() : Model.GiftVoucher.Gift_Voucher_Expiry_Date.ToString("MM-dd-yyyy")))" />
+                                <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
+                            </div>
+                        </div>*@  
+
+                        <div class="form-group">
+                            <span class="label label-primary label-form" style="margin-bottom: 1px;">Credit Note Date</span>
+                            <div class="input-group date" data-date="" data-date-format="MM-dd-yyyy">
+                                <input type="text" class="form-control datepicker" id="txtVoucherDate" name="GiftVoucher.Gift_Voucher_Date" value="@((Model.GiftVoucher.Gift_Voucher_Date == DateTime.MinValue ? DateTime.Now.ToString("MM-dd-yyyy") : Model.GiftVoucher.Gift_Voucher_Date.ToString("MM-dd-yyyy")))" />
                                 <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
                             </div>
                         </div>
-                     
-
+                        
                         <div class="form-group">
                             <span class="label label-primary label-form" style="margin-bottom: 1px;">Voucher expiry date</span>
-                            <div class="input-group date"  data-date="" data-date-format="MM-dd-yyyy">
-                                <input type="text" class="form-control datepicker" id="txtVoucherExpiryDate" placeholder="Voucher expiry date." name="GiftVoucher.Gift_Voucher_Expiry_Date" value="@((Model.GiftVoucher.Gift_Voucher_Expiry_Date == DateTime.MinValue ? "" : Model.GiftVoucher.Gift_Voucher_Expiry_Date.ToString("MM-dd-yyyy")))" readonly />@*reado*@
+                            <div class="input-group date" data-date="" data-date-format="MM-dd-yyyy">
+                                <input type="text" class="form-control datepicker" id="txtVoucherExpiryDate" name="GiftVoucher.Gift_Voucher_Expiry_Date" value="@((Model.GiftVoucher.Gift_Voucher_Expiry_Date == DateTime.MinValue ? DateTime.Now.ToString("MM-dd-yyyy") : Model.GiftVoucher.Gift_Voucher_Expiry_Date.ToString("MM-dd-yyyy")))" />
                                 <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
                             </div>
-                        </div>  
+                        </div>
+
 
                     </div>
 
