--- a/MyLeoRetailer/Views/PostLogin/Master/GiftVoucher/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/GiftVoucher/Index.cshtml
@@ -84,7 +84,7 @@
                         <div class="form-group">
                             <span class="label label-primary label-form" style="margin-bottom: 1px;">Credit Note Date</span>
                             <div class="input-group date" data-date="" data-date-format="MM-dd-yyyy">
-                                <input type="text" class="form-control datepicker" id="txtVoucherDate" name="GiftVoucher.Gift_Voucher_Date" value="@((Model.GiftVoucher.Gift_Voucher_Date == DateTime.MinValue ? DateTime.Now.ToString("MM-dd-yyyy") : Model.GiftVoucher.Gift_Voucher_Date.ToString("MM-dd-yyyy")))" />
+                                <input type="text" class="form-control datepicker" id="txtVoucherDate" name="GiftVoucher.Gift_Voucher_Date" value="@((Model.GiftVoucher.Gift_Voucher_Date == DateTime.MinValue ? DateTime.Now.ToShortDateString() : Model.GiftVoucher.Gift_Voucher_Date.ToShortDateString()))" />
                                 <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
                             </div>
                         </div>
@@ -92,7 +92,7 @@
                         <div class="form-group">
                             <span class="label label-primary label-form" style="margin-bottom: 1px;">Voucher expiry date</span>
                             <div class="input-group date" data-date="" data-date-format="MM-dd-yyyy">
-                                <input type="text" class="form-control datepicker" id="txtVoucherExpiryDate" name="GiftVoucher.Gift_Voucher_Expiry_Date" value="@((Model.GiftVoucher.Gift_Voucher_Expiry_Date == DateTime.MinValue ? DateTime.Now.ToString("MM-dd-yyyy") : Model.GiftVoucher.Gift_Voucher_Expiry_Date.ToString("MM-dd-yyyy")))" />
+                                <input type="text" class="form-control datepicker" id="txtVoucherExpiryDate" name="GiftVoucher.Gift_Voucher_Expiry_Date" value="@((Model.GiftVoucher.Gift_Voucher_Expiry_Date == DateTime.MinValue ? DateTime.Now.ToShortDateString() : Model.GiftVoucher.Gift_Voucher_Expiry_Date.ToShortDateString()))" />
                                 <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
                             </div>
                         </div>
