Fixed all bugs in Inword and outword.

--- a/MyLeoRetailer/Views/PostLogin/Barcode/Barcode.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Barcode/Barcode.cshtml
@@ -44,7 +44,7 @@
                             <div class="form-group auto-complete">
                                 <span class="label label-primary label-form" style="margin-bottom: 1px;">SKU Code.</span>
                                 <div class="input-group">
-                                    <input type="text" class="form-control autocomplete-text" id="textSKU_Code" name="SKU" placeholder="SKU code" value="" data-table="Product_Warehouse" data-col="Product_Warehouse_Id,Product_SKU" data-headernames="Warehouse SKU" />
+                                    <input type="text" class="form-control autocomplete-text" id="textSKU_Code" name="SKU" placeholder="SKU code" value="" data-table="Product_SKU_Mapping" data-col="Product_Id,SKU_Code" data-headernames="SKU" />
                                     <span class="input-group-addon"><a href="#" class="text-muted" id="hrefDealer" role="button"><i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
                                     <input type="hidden" id="hdnInventory_Id" value="" name="" class="auto-complete-value" />
                                     <input type="hidden" id="hdnProduct_SKU" value="" name="Barcode.Product_SKU" class="auto-complete-label" />
