--- a/MyLeoRetailer/Views/PostLogin/SalesOrder/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/SalesOrder/Index.cshtml
@@ -306,14 +306,14 @@
                                             <input class="form-control input-sm" type="text" name="SaleOrderItemList[0].MRP_Price" id="textMRP_Price_0" readonly placeholder="MRP">
                                         </td>
                                         <td>
-                                            <input class="form-control input-sm" type="text" name="SaleOrderItemList[0].Quantity" id="textQuantity_0" value="" placeholder="Quantity" onblur="javascript: CalculateQuantityMRP();" maxlength="10">
+                                            <input class="form-control input-sm" type="text" name="SaleOrderItemList[0].Quantity" id="textQuantity_0" value="1" placeholder="Quantity" onblur="javascript: CalculateQuantityMRP();" maxlength="10">
                                             <input type="hidden" id="hdnQuantity" value="@Model.SalesInvoice.Quantity1" name="SalesInvoice.Quantity1">
                                         </td>
                                         <td>
-                                            <input class="form-control input-sm" type="text" name="SaleOrderItemList[0].Discount_Percentage" id="textDiscount_Percentage_0" value="" onblur="javascript: CalculateTotal();" placeholder="Disc %" maxlength="5">
+                                            <input class="form-control input-sm" type="text" name="SaleOrderItemList[0].Discount_Percentage" id="textDiscount_Percentage_0" value="0" onblur="javascript: CalculateTotal();" placeholder="Disc %" maxlength="5">
                                         </td>
                                         <td>
-                                            <input class="form-control input-sm" type="text" name="SaleOrderItemList[0].SalesOrder_Discount_Amount" id="textSalesOrder_Discount_Amount_0" readonly placeholder="D Amt">
+                                            <input class="form-control input-sm" type="text" name="SaleOrderItemList[0].SalesOrder_Discount_Amount" id="textSalesOrder_Discount_Amount_0" value="0" readonly placeholder="D Amt">
                                         </td>
                                         <td>
                                             <input class="form-control input-sm" type="text" name="SaleOrderItemList[0].Amount" id="textAmount_0" readonly placeholder="Amt">
