--- a/MyLeoRetailer/Views/PostLogin/SalesReturn/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/SalesReturn/Index.cshtml
@@ -331,7 +331,7 @@
                                         </td>
 
                                         <td>
-                                            <input class="form-control input-sm" type="text" name="SaleReturnItemList[0].Quantity" id="textQuantity_0" value="" placeholder="Quantity" onblur="javascript: CalculateTotal();" maxlength="10">
+                                            <input class="form-control input-sm" type="text" name="SaleReturnItemList[0].Quantity" id="textQuantity_0" value="1" placeholder="Quantity" onblur="javascript: CalculateTotal();" maxlength="10">
                                             <input type="hidden" id="hdnQuantity" value="@Model.SalesReturn.Quantity1" name="SalesInvoice.Quantity1">
                                         </td>
                                         <td>
@@ -341,7 +341,7 @@
                                             <input class="form-control input-sm" type="text" name="SaleReturnItemList[0].Discount_Percentage" id="textDiscount_Percentage_0" value="0" onblur="javascript: CalculateTotal();" placeholder=" discount %" maxlength="10">
                                         </td>
                                         <td>
-                                            <input class="form-control input-sm" type="text" name="SaleReturnItemList[0].SalesReturn_Discount_Amount" id="textSalesReturn_Discount_Amount_0" readonly placeholder="D Amt">
+                                            <input class="form-control input-sm" type="text" name="SaleReturnItemList[0].SalesReturn_Discount_Amount" id="textSalesReturn_Discount_Amount_0" value="0" readonly placeholder="D Amt">
                                         </td>
                                         <td>
                                             <input class="form-control input-sm" type="text" name="SaleReturnItemList[0].Amount" id="textAmount_0" readonly placeholder="Amt">
