Added dummy sales order pages.

--- a/MyLeoRetailer/Views/Shared/_Menu.cshtml
+++ b/MyLeoRetailer/Views/Shared/_Menu.cshtml
@@ -75,6 +75,10 @@
         <a href="/Barcode/Barcode"><span class="fa fa-files-o"></span> <span class="xn-text">Generate Barcode</span></a>
     </li>
 
+    <li class="xn-openable">
+        <a href="/SalesOrder/DummySalesOrderList"><span class="fa fa-cogs"></span> <span class="xn-text">Online Orders</span></a>
+    </li>
+
     <!-- SIGN OUT -->
     <li class="xn-icon-button pull-right">
         <a href="#" class="mb-control" data-box="#mb-signout"><span class="fa fa-sign-out"></span></a>
